# hilbert-qusim

./: .gitignore  CMakeLists.txt  Makefile  README.md  test.sh
.github/workflows/: cmake-single-platform.yml
lib/: algebra_engine.cpp  algebra_engine.h  circuit_engine.cpp  circuit_engine.h  complex_vector_split.h  complex_vectorised_matrix.h  gate_engine.cpp  gate_engine.h  hilbert_namespace.h  lazy_operation.cpp  lazy_operation.h  operation.h  qubit.h  simd.h  simd_apple.h  simd_avx.h  state_vector.h
src/: hilbert_namespace.h
src/core/: complex_vector_split.h  complex_vectorised_matrix.h  lazy_matrix.cpp  lazy_matrix.h  lazy_matrix_operation.h  lazy_matrix_operation_cast.cpp  lazy_matrix_operation_cast.h  lazy_matrix_operation_identity.cpp  lazy_matrix_operation_identity.h  lazy_matrix_operation_lazy_outer_product.cpp  lazy_matrix_operation_lazy_outer_product.h  lazy_matrix_operation_lazy_scalar_product.cpp  lazy_matrix_operation_lazy_scalar_product.h  lazy_matrix_operation_lazy_sum.cpp  lazy_matrix_operation_lazy_sum.h  lazy_matrix_operation_lazy_tensor_product.cpp  lazy_matrix_operation_lazy_tensor_product.h  lazy_matrix_operation_scalar_product.cpp  lazy_matrix_operation_scalar_product.h  lazy_matrix_operation_tensor_product.cpp  lazy_matrix_operation_tensor_product.h  lazy_operation.cpp  lazy_operation.h  lazy_vector.cpp  lazy_vector.h  lazy_vector_operation.h  lazy_vector_operation_cast.cpp  lazy_vector_operation_cast.h  lazy_vector_operation_identity.cpp  lazy_vector_operation_identity.h  lazy_vector_operation_lazy_matrix_vector_product.cpp  lazy_vector_operation_lazy_matrix_vector_product.h  lazy_vector_operation_lazy_scalar_product.cpp  lazy_vector_operation_lazy_scalar_product.h  lazy_vector_operation_lazy_tensor_product.cpp  lazy_vector_operation_lazy_tensor_product.h  lazy_vector_operation_matrix_vector_product.cpp  lazy_vector_operation_matrix_vector_product.h  lazy_vector_operation_scalar_product.cpp  lazy_vector_operation_scalar_product.h  (+6 more)
src/engine/: algebra_engine.cpp  algebra_engine.h  circuit_engine.cpp  circuit_engine.h  gate_engine.cpp  gate_engine.h
src/model/: lazy_matrix.cpp  lazy_matrix.h  lazy_vector.cpp  lazy_vector.h  qubit.cpp  qubit.h
test/: algebra_engine_test.cpp  circuit_engine_test.cpp  complex_vector_split_test.cpp  complex_vectorised_matrix_test.cpp  gate_engine_test.cpp  hilbert_namespace_test.h  lazy_matrix_test.cpp  lazy_vector_test.cpp  qubit_test.cpp
